--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ storage/*.key
 .env
 Homestead.yaml
 Homestead.json
+.idea/workspace.xml
 
 # Rocketeer PHP task runner and deployment package. https://github.com/rocketeers/rocketeer
 .rocketeer/
